<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
    style="@style/WrappedContent"
    a:layout_weight="2"
    a:gravity="center"
    a:orientation="vertical" >

    <LinearLayout
        style="@style/WrappedContent"
        a:layout_weight="1" >

        <ImageView
            a:id="@+id/image0"
            style="@style/ClickableGameMoves"
            a:contentDescription="@string/rock"
            a:src="@drawable/s0" />
    </LinearLayout>

    <LinearLayout
        style="@style/WrappedContent"
        a:layout_weight="1" >

        <ImageView
            a:id="@+id/image4"
            style="@style/ClickableGameMoves"
            a:layout_marginRight="80dp"
            a:contentDescription="@string/lizard"
            a:src="@drawable/s4" />

        <ImageView
            a:id="@+id/image1"
            style="@style/ClickableGameMoves"
            a:contentDescription="@string/paper"
            a:src="@drawable/s1" />
    </LinearLayout>

    <LinearLayout
        style="@style/WrappedContent"
        a:layout_weight="1" >

        <ImageView
            a:id="@+id/image3"
            style="@style/ClickableGameMoves"
            a:layout_marginRight="30dp"
            a:contentDescription="@string/spock"
            a:src="@drawable/s3" />

        <ImageView
            a:id="@+id/image2"
            style="@style/ClickableGameMoves"
            a:contentDescription="@string/scissors"
            a:src="@drawable/s2" />
    </LinearLayout>

</LinearLayout>