<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    a:id="@+id/LinearLayout1"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    a:gravity="center"
    a:orientation="vertical"
    a:paddingBottom="@dimen/activity_vertical_margin"
    a:paddingLeft="@dimen/activity_horizontal_margin"
    a:paddingRight="@dimen/activity_horizontal_margin"
    a:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Menu" >

    <include
        style="@style/WrappedContent"
        layout="@layout/game_results" />

    <TextView
        style="@style/WrappedContent"
        a:text="@string/selectPlayer"
        a:textAlignment="center" />

    <LinearLayout
        style="@style/WrappedContent"
        a:orientation="horizontal" >

        <Button
            a:id="@+id/button1"
            style="@style/WrappedContent"
            a:onClick="makeMove"
            a:text="@string/player1" >
        </Button>

        <Button
            a:id="@+id/button2"
            style="@style/WrappedContent"
            a:onClick="makeMove"
            a:text="@string/player2" >
        </Button>
    </LinearLayout>

</LinearLayout>